--- a/src/client/index.css
+++ b/src/client/index.css
@@ -5,11 +5,11 @@ main {
   padding: var(--pico-block-spacing-horizontal);
   max-width: 1920px;
 }
-.items {
+.items > ul {
   &:empty {
     display: none;
   }
-  &:has(.item) + .done {
+  &:has(article) + .done {
     display: none;
   }
 }
@@ -20,7 +20,7 @@ main {
   align-items: center;
   justify-content: center;
 }
-.item {
+article {
   margin: 20px;
   display: grid;
   grid-template-columns: 1fr;
@@ -30,18 +30,7 @@ header {
   display: grid;
   grid-template-columns: 1fr auto;
 }
-dl {
-  display: inline-flex;
-  gap: 0.5em;
-  align-self: center;
-}
-dd {
-  padding: 0;
-  margin: 0;
-  font-weight: bold;
-  &:after {
-    content: ":";
-  }
+h1 {
 }
 img-comparison-slider {
   grid-column: span 2;
