--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,14 +1,32 @@
-main {
-  --nav-width: 250px;
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
 
+main {
   display: grid;
-  grid-template-columns: var(--nav-width) 1fr;
+  grid-template-columns: 300px minmax(auto, 1920px);
+  justify-content: center;
+
   font-family: sans-serif;
+  gap: 10px;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
 }
 aside {
   nav {
     position: sticky;
-    top: 0;
+    top: 20px;
+
+    ol {
+      margin: 0;
+
+      li {
+        margin-bottom: 0.5em;
+      }
+    }
   }
 }
 section {
@@ -16,15 +34,38 @@ section {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
+    box-sizing: border-box;
+    border-width: 1px;
+    border-style: solid;
+
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
 
     header {
       display: grid;
       grid-template-columns: 1fr auto;
+      padding: 10px;
+
+      h1 {
+        margin-top: 0;
+        padding-top: 20px;
+      }
 
       form {
         display: flex;
         margin: 0;
         gap: 20px;
+
+        fieldset {
+          height: 40px;
+        }
+
+        button {
+          position: relative;
+          top: 8px;
+          height: 51px;
+        }
       }
     }
 
@@ -33,7 +74,8 @@ section {
       container-type: inline-size;
 
       > img[slot] {
-        width: 100cqw;
+        margin: auto;
+        max-width: 100cqw;
       }
     }
   }
