Refactor mode toggle

--- a/src/web/style.css
+++ b/src/web/style.css
@@ -86,6 +86,10 @@ section {
       > img[slot] {
         margin: auto;
         max-width: 100cqw;
+
+        &[hidden] {
+          display: none;
+        }
       }
     }
   }
