--- a/src/web/style.css
+++ b/src/web/style.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   margin: 0;
 }
+* {
+  box-sizing: border-box;
+}
 
 main {
   display: grid;
@@ -16,10 +19,17 @@ main {
   font-size: 16px;
 }
 aside {
-  nav {
+  form {
+    padding: 10px;
+    fieldset {
+      width: 100%;
+    }
+  }
+  .content {
     position: sticky;
-    top: 20px;
-
+    top: 0;
+  }
+  nav {
     ol {
       margin: 0;
 
