--- a/src/web/style.css
+++ b/src/web/style.css
@@ -7,22 +7,45 @@ body {
   box-sizing: border-box;
 }
 
-:root {
-  --app-background-color: #f0f0f0;
-  --panel-background-color: white;
-  --panel-border-color: black;
-  --panel-border-width: 1px;
-  --panel-border-radius: 5px;
-  --panel-gap: 20px;
+@media (prefers-color-scheme: light) {
+  :root {
+    --font-color: black;
+    --app-background-color: #f0f0f0;
+    --panel-background-color: white;
+    --panel-border-color: black;
+    --panel-border-width: 1px;
+    --panel-border-radius: 5px;
+    --panel-gap: 20px;
 
-  --link-color: blue;
-  --link-color-hover: darkblue;
+    --link-color: blue;
+    --link-color-hover: darkblue;
 
-  --button-background-color: #f0f0f0;
-  --button-border-color: black;
-  --button-border-width: 1px;
-  --button-border-radius: 5px;
-  --button-color: black;
+    --button-background-color: #f0f0f0;
+    --button-border-color: black;
+    --button-border-width: 1px;
+    --button-border-radius: 5px;
+    --button-color: black;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --font-color: white;
+    --app-background-color: #333;
+    --panel-background-color: #444;
+    --panel-border-color: white;
+    --panel-border-width: 1px;
+    --panel-border-radius: 5px;
+    --panel-gap: 20px;
+
+    --link-color: lightblue;
+    --link-color-hover: lightcyan;
+
+    --button-background-color: #444;
+    --button-border-color: white;
+    --button-border-width: 1px;
+    --button-border-radius: 5px;
+    --button-color: white;
+  }
 }
 
 main {
@@ -92,7 +115,6 @@ section {
       position: sticky;
       top: 10px;
       z-index: 2;
-      background: white;
 
       h1 {
         padding: 0;
@@ -136,12 +158,16 @@ section {
 }
 
 /* Theme */
+:root {
+  color: var(--font-color);
+}
 .panel {
   background-color: var(--panel-background-color);
   border-color: var(--panel-border-color);
   border-radius: var(--panel-border-radius);
 
   .panel-header {
+    background-color: var(--panel-background-color);
     padding: var(--panel-gap);
   }
   .panel-content {
